- iframes are no longer hidden by default.
git-svn-id: https://pligg.svn.beanstalkapp.com/svnroot/trunk@807 68377534-e894-4f14-aad3-e92cf46e58fa

--- a/templates/bootstrap/css/style.css
+++ b/templates/bootstrap/css/style.css
@@ -716,7 +716,5 @@ table.tablesorter thead tr .headerSortDown {
 }
 
 /************* RECAPTCHA **************/
-/* Fix to hide the iframe inserted near navbar end */
-iframe {display:none;} 
 /* Apply the iframe class to any iframes that need to display */
 iframe.iframe {display:block} 
